# egui_mobius_template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md  log_colors.json
.github/workflows/: rust.yml
examples/reactive/: Cargo.toml
examples/reactive-async/: README.md
examples/reactive-async/src/: main.rs  runtime_integration.rs  state.rs  types.rs
examples/reactive-async/src/ui/: about_panel.rs  logger_panel.rs  settings_panel.rs
examples/reactive/src/: main.rs
examples/reactive/src/ui/: about_panel.rs  logger_panel.rs
examples/signal-slots/src/: logging_macros.rs  main.rs
examples/signal-slots/src/ui/: settings_panel.rs
examples/signals-slot/: Cargo.toml  README.md
examples/signals-slot/src/: circuit.rs  main.rs  state.rs  types.rs
examples/signals-slot/src/slots/: simulation.rs
examples/signals-slot/src/ui/: mod.rs  parameter_panel.rs  plot_panel.rs
examples/template_example/: Cargo.toml  log_colors.json
examples/template_example/src/: logging_macros.rs  main.rs
examples/template_example/src/ui/: control_panel.rs  logger_panel.rs  mod.rs  settings_panel.rs  taffy_panel.rs
src/: colors.rs  lib.rs
