[package]
name = "egui_mobius_template"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31.1" # For egui-based applications
egui = "0.31.1"
egui_dock = "0.16.0"
egui_extras = { version = "0.31.1", features = ["image"] } # For image loading and other utilities
egui_mobius_widgets = "0.3.0-alpha.23" # For egui widgets
egui_mobius_reactive = "0.3.0-alpha.23" # For reactive state management
chrono = "0.4" # For timestamps
image = "0.24" # For image loading
once_cell = "1.19" # For static initialization

[[example]]
name = "template_example"
path = "examples/template_example/src/main.rs"
